--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,2 @@
-$dark: #202022;
+@import url('../node_modules/bootstrap-icons/font/bootstrap-icons.css');
 
-body {
-	padding: 0;
-	margin: 0;
-	background-color: $dark;
-}
